tests/gpu/check/illegal_dma_sync.co
// REQUIRES: TARGET-SM_90A
// RUN: choreo -es --use-warpspec -t cute -arch=sm_90a %s -o - 2>&1 | FileCheck %s
// RUN: choreo -es -t cute -arch=sm_90a %s -o - 2>&1 | FileCheck %s --check-prefix=CHECK-OFF

__co__ void foo(f32 [128, 128] input) {
  
  parallel b by 1 : block {
    parallel g by 2 : group-4 {
      shared f32 [128, 128] input_s;
      shared event full[2];
      
      inthreads (g == 0) {
        foreach {stage} in [2]
          tma.copy.async<full[stage]> input.chunkat(_, _) => input_s;
        tma.copy.async input.chunkat(_, _) => input_s;
      }
      foreach {stage} in [2]
        tma.copy.async<full[stage]> input.chunkat(_, _) => input_s;
    }
  }
}

// CHECK-OFF: error: async dma/tma with event is only supported in warpspec mode.
// CHECK-OFF: error: forbid to associated async dma without a named future or a named event.

// CHECK: warning: Be careful to wait event outside inthreads block, which may lead to parallelism issues.